feat: 에러 메시지 추가